--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     href="https://emscripten.org/">Emscripten</a>.
             </p>
             <p class="text">
-                Full source code can be found <a href="https://mvishnurana1.github.io/">here</a>.
+                Full source code can be found <a href="https://github.com/mvishnurana1/software-renderer">here</a>.
             </p>
             <h2 class="heading">Console Output</h2>
             <textarea class="code_console" id="output" rows=8></textarea>
